--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@
                             </table>
                         </div>
                         <div className="app-footer">
-                            <span className="app-footer-text">CLICK TO VIEW • HOVER TO PREVIEW</span>
+                            <span className="app-footer-text">CLICK TO VIEW - HOVER TO PREVIEW</span>
                         </div>
                     </div>
                 );
@@ -1678,7 +1678,7 @@
                         </div>
                     </div>
                     <div className="app-footer">
-                        <span className="app-footer-text">MOVIES • BOOKS • GAMES • MUSIC</span>
+                        <span className="app-footer-text">MOVIES - BOOKS - GAMES - MUSIC</span>
                     </div>
                 </div>
             );
@@ -2713,7 +2713,7 @@
                         </div>
                     </div>
                     <div className="app-footer">
-                        <span className="app-footer-text">EAT FOOD • GROW LONGER • DON'T DIE</span>
+                        <span className="app-footer-text">EAT FOOD - GROW LONGER - DON'T DIE</span>
                     </div>
                 </div>
             );
@@ -5816,7 +5816,7 @@
                             ))
                         )}
                         <div className="text-center mt-4 font-mono text-[10px] text-gray-400">
-                            {flowers.length} FLOWER{flowers.length !== 1 ? 'S' : ''} COLLECTED • 125 POSSIBLE VARIETIES
+                            {flowers.length} FLOWER{flowers.length !== 1 ? 'S' : ''} COLLECTED - 125 POSSIBLE VARIETIES
                         </div>
                     </div>
                 );
@@ -6876,11 +6876,11 @@
                         <Icons.Browser size={64} />
                         <div className="font-mono text-lg font-bold mt-4 mb-2">ZEN</div>
                         <div className="font-mono text-xs text-gray-500 text-center max-w-xs">
-                            Search for apps or type "mateusmuste.com" to reboot
+                            Search for apps
                         </div>
                     </div>
                     <div className="app-footer">
-                        <span className="app-footer-text">SEARCH • NAVIGATE • DISCOVER</span>
+                        <span className="app-footer-text">SEARCH - NAVIGATE - DISCOVER</span>
                     </div>
                 </div>
             );
@@ -9263,7 +9263,7 @@
 
                     {/* TASKBAR */}
                     <div className={`h-12 bg-white flex items-center px-2 gap-1 md:gap-2 z-[99999] absolute w-full shadow-2xl ${isMobile ? 'top-0 border-b-2 border-black mobile-taskbar-top' : 'bottom-0 border-t-2 border-black mt-auto'}`}>
-                        <div className={`bg-black text-white py-1 font-black select-none tracking-wider ${isMobile ? 'px-1 text-[8px]' : 'px-2 text-xs mr-2'}`}>{isMobile ? 'MM.COM' : 'MATEUSMUSTE.COM'}</div>
+                        <div className={`bg-black text-white py-1 font-black select-none tracking-wider ${isMobile ? 'px-1 text-[8px]' : 'px-2 text-xs mr-2'}`}>{isMobile ? 'MATEUSMUSTE' : 'MATEUSMUSTE.COM'}</div>
                         <div className={`flex gap-1 ${isMobile ? 'overflow-x-auto flex-nowrap' : ''}`}>
                             {Object.values(windows).map(win => {
                                 const IconCmp = Icons[win.icon];
@@ -9422,3 +9422,4 @@
 </body>
 
 </html>
+
